--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,7 +4,8 @@ Base Rules
 */
 
 body {
-    background-color: #c1faff;
+    background-color: #000;
+    color: white;
     @include body-font-regular;
     @include fontSize(18px);
     line-height: 1.4;
@@ -19,13 +20,13 @@ h1 {
     line-height: 1;
     text-align: center;
     border-style:solid;
-    border-color:#287EC7;
-    border-bottom: 6px;
+    border-color:#fff;
+    border-bottom: 4px;
+    padding: 4px 5px 6px 5px;
     
 }
 
 h2 {
-    border-top: dashed;
     border-color: #fff;
     @include fontSize(40px);
     
@@ -34,7 +35,7 @@ h2 {
 h6 {
     @include fontSize(32px);
     border-style: dashed;
-    border-color: #fff;
+    border-color: #9f9f9f;
     padding: 4px 5px 6px 5px;
     text-align: center;
 }
@@ -53,8 +54,8 @@ img {
 }
 
 nav {
-    background-color: #e0f8ff;
-    border: 1px solid $background-color;
+    background-color: #000;
+    border: 3px solid $background-color;
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
     border-top: 6px;
@@ -85,7 +86,7 @@ article h1 {
 }
 
 article p:first-of-type {
-    @include fontSize(28px);
+    @include fontSize(14px);
 }
 
 article p:second-of-type {
@@ -113,11 +114,12 @@ article div {
 //article footer {
 //main article footer {
 footer[role="complementary"] {
-    border-bottom: 1px #fff dashed;
-    border-top: 1px #fff dashed;
-    color: #1a0707;
+    border-bottom: 1px #fff solid;
+    border-top: 1px #fff solid;
+    color: #b5b5b5;
     margin: 40px 0;
     padding: 20px 0;
+    font-size: 20;
 }
 
 footer[role="complementary"] p {
