--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -16,60 +16,61 @@ Globals
 }
 
 @font-face {
-  font-family: 'Dosis';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Dosis Light'), local('Dosis-Light'), url(http://fonts.gstatic.com/s/dosis/v4/7aJzV14HzAOiwNTiPgucGRkAz4rYn47Zy2rvigWQf6w.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-@font-face {
-  font-family: 'Dosis';
+  font-family: 'Crimson Text';
   font-style: normal;
   font-weight: 400;
-  src: local('Dosis Regular'), local('Dosis-Regular'), url(http://fonts.gstatic.com/s/dosis/v4/oaBFj7Fz9Y9_eW3k9Jd9X4DGDUGfDkXyfkzVDelzfFk.woff2) format('woff2');
+  src: local('Crimson Text'), local('CrimsonText-Roman'), url(http://fonts.gstatic.com/s/crimsontext/v6/3IFMwfRa07i-auYR-B-zNRVuXpl7XtNjpLlhhhGlVqc.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
 @font-face {
-  font-family: 'Droid Serif';
+  font-family: 'Playfair Display';
   font-style: normal;
-  font-weight: 400;
-  src: local('Droid Serif'), local('DroidSerif'), url(http://fonts.gstatic.com/s/droidserif/v6/0AKsP294HTD-nvJgucYTaJQV2lvL5Ba9FjAYK6Lx0Qk.woff2) format('woff2');
+  font-weight: 700;
+  src: local('Playfair Display Bold'), local('PlayfairDisplay-Bold'), url(http://fonts.gstatic.com/s/playfairdisplay/v9/UC3ZEjagJi85gF9qFaBgIN4KoCs5_BuQksQmhwRAS2Y.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
 @font-face {
-  font-family: 'Droid Serif';
+  font-family: 'Crimson Text';
   font-style: italic;
   font-weight: 400;
-  src: local('Droid Serif Italic'), local('DroidSerif-Italic'), url(http://fonts.gstatic.com/s/droidserif/v6/cj2hUnSRBhwmSPr9kS5893g2OlVIdL8hHNlffo755yo.woff2) format('woff2');
+  src: local('Crimson Text Italic'), local('CrimsonText-Italic'), url(http://fonts.gstatic.com/s/crimsontext/v6/a5QZnvmn5amyNI-t2BMkWI34wjPzHKS4eJTX0vCeQpI.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
+
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Playfair Display'), local('PlayfairDisplay-Regular'), url(http://fonts.gstatic.com/s/playfairdisplay/v9/2NBgzUtEeyB-Xtpr9bm1CRD8Ne_KjP89kA3_zOrHj8E.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
 
 
 
 @mixin body-font-regular {
-    font-family: 'Dosis', georgia, serif;
-    font-style: normal;
-    font-weight: 300;
-}
-
-@mixin body-font-bold {
-    font-family: 'Droid Serif', georgia, serif;
+    font-family: 'Crimson Text', georgia, serif;
     font-style: normal;
     font-weight: 400;
 }
 
-@mixin headline-font {
-    font-family: 'Droid Serif', helvetica, verdana, sans-serif;
-    font-style: normal; 
-    font-weight: 400; 
+@mixin body-font-bold {
+    font-family: 'Playfair Display', georgia, serif;
+    font-style: normal;
+    font-weight: 700;
 }
 
 @mixin headline-font {
     font-family: 'Droid Serif', helvetica, verdana, sans-serif;
     font-style: italic; 
+    font-weight: 400; 
+}
+
+@mixin headline-font {
+    font-family: 'Playfair Display', helvetica, verdana, sans-serif;
+    font-style: normal; 
     font-weight: 400; 
 }
 
